<resources>
    <string name="app_name">JS Performance</string>

    <string name="running_test">Running test…</string>
    <string name="test_option_engine_label">Engine</string>
    <string name="test_engine_jsevaluator">JS Evaluator</string>
    <string name="test_engine_jscore">AndroidJSCore</string>
    <string name="test_engine_v8">J2V8</string>
    <string name="test_engine_duktape">Duktape</string>
    <string name="test_engine_rhino">Rhino</string>
    <string name="start_test">Start</string>
    <string name="test_option_iterations">Iterations</string>
    <string name="test_option_iterations_hint">100</string>
    <string name="error_invalid_input">Invalid input</string>

    <string name="test_initialization">Initializing</string>
    <string name="test_execution_load">Loading</string>
    <string name="test_execution_loop">Looping</string>
    <string name="test_grader">Grading</string>
</resources>
