<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer_8dp_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:showDividers="middle"
        tools:context=".grading.GradingActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_option_engine_label" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/test_option_engine_jsevaluator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/test_engine_jsevaluator" />

                <RadioButton
                    android:id="@+id/test_option_engine_jscore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_engine_jscore" />

                <RadioButton
                    android:id="@+id/test_option_engine_v8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_engine_v8" />

                <RadioButton
                    android:id="@+id/test_option_engine_duktape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_engine_duktape" />

                <RadioButton
                    android:id="@+id/test_option_engine_rhino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_engine_rhino"
                    />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_option_iterations" />

            <EditText
                android:id="@+id/test_option_iterations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/test_option_iterations_hint"
                android:inputType="number"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <Button
            android:id="@+id/start_test"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/start_test" />

        <TextView
            android:id="@+id/test_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/running_test" />

        <TextView
            android:id="@+id/test_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="1823 ms" />

    </LinearLayout>

</ScrollView>
