<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer_8dp_horizontal"
        android:showDividers="beginning|middle|end">

        <Button
            android:id="@+id/test_initialization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/test_initialization" />

        <Button
            android:id="@+id/test_execution_loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/test_execution_loop" />

        <Button
            android:id="@+id/test_execution_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/test_execution_load" />

        <Button
            android:id="@+id/test_grader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/test_grader" />

    </LinearLayout>

</ScrollView>
